--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,12 @@
     <script>
         function initMap() {
             const map = new google.maps.Map(document.getElementById('map'), {
-                center: { lat: -25.7479, lng: 28.2293 }, // Default location: Pretoria, South Africa
+                center: { lat: -25.7479, lng: 28.2293 },
                 zoom: 8,
             });
 
             const infoWindow = new google.maps.InfoWindow();
 
-            // Click event to drop a pin and show info
             map.addListener('click', (event) => {
                 const marker = new google.maps.Marker({
                     position: event.latLng,
@@ -76,17 +75,14 @@
                     return;
                 }
 
-                // Move map to the selected location
                 map.setCenter(place.geometry.location);
                 map.setZoom(15);
 
-                // Drop a pin at the location
                 const marker = new google.maps.Marker({
                     position: place.geometry.location,
                     map: map,
                 });
-
-                // Show info window with details
+                
                 infoWindow.setContent(
                     `<div class="info-window-content"><strong>${place.name}</strong><br>Latitude: ${place.geometry.location.lat()}<br>Longitude: ${place.geometry.location.lng()}</div>`
                 );
@@ -94,7 +90,6 @@
             });
         }
 
-        // Initialize the map when the page loads
         window.onload = initMap;
     </script>
 </body>
